array.island.Island.scala.error
Compilation error:
Island:4: error: '<-' expected but '=>' found.
  for (i=>num) {
        ^Island:9: error: illegal start of simple expression
  }
  ^Island:13: error: Unmatched closing brace '}' ignored here
}
^